# itree

./: .ai-review-ci.toml  .envrc  .gitignore  AGENTS.md  README.md  WORKFLOWS.md  __init__.py  __main__.py  cli.py  github.py  justfile  models.py  pyproject.toml  traversal.py  validate.py
.github/workflows/: release.yml
src/itree/: ISSUE_ITREE_MAINTENANCE.md  WORKFLOWS.md  __init__.py  __main__.py  audit.py  cli.py  contracts.py  github.py  metrics.py  milestone.py  models.py  predicates.py  readiness.py  render.py  traversal.py  validate.py
tests/: __init__.py  test_audit.py  test_build_dag.py  test_cli.py  test_closed_subissue_detach.py  test_contracts.py  test_doctor.py  test_github_fixtures.py  test_metrics.py  test_milestone.py  test_milestone_gh_outcome.py  test_models.py  test_rails.py  test_readiness.py  test_render.py  test_scan.py  test_traversal.py  test_validate.py  test_validate_dag.py
tests/fixtures/: __init__.py  graphql_issues_pages.json  issue_child.json  issue_closed.json  issue_single.json  sub_issues_list.json  sub_issues_nested.json
