[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itree"
version = "0.1.0"
description = "Deterministic traversal layer over GitHub sub-issue trees"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Agent", email = "agent@localhost"}]
dependencies = ["cyclopts>=2.0", "pydantic>=2.0"]

[project.scripts]
itree = "itree.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/itree"]
